# dokploy-deploy-action

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  action.yml  deploy.yaml.template  dokdeploy  pyproject.toml  readme.md  requirements.txt  test_local.sh.template
.github/: FUNDING.yml
src/: __init__.py  cli.py  config.py  deploy.py  deployment_tracker.py  dokploy_client.py  logger.py
thoughts/: dokploy-action-analysis.md  dokploy-api-compose.md
